--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         while (retries < maxRetries) {
             try {
                 console.log(`Tentativa ${retries + 1} de carregar números at ${new Date().toISOString()}...`);
-                const availableRes = await fetch('https://mp-api.onrender.com/available_numbers', {
+                const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
                     method: 'GET',
                     headers: { 'Content-Type': 'application/json' },
                     timeout: 5000 // Timeout de 5 segundos
@@ -217,7 +217,7 @@
                     numberContainer.appendChild(numDiv);
                 }
 
-                const progressRes = await fetch('https://mp-api.onrender.com/progress', {
+                const progressRes = await fetch('https://rifa-miguel.onrender.com/progress', {
                     method: 'GET',
                     headers: { 'Content-Type': 'application/json' },
                     timeout: 5000
@@ -276,7 +276,7 @@
                 console.log(`Tentativa ${retries + 1} de enviar pagamento at ${new Date().toISOString()}...`);
                 const controller = new AbortController();
                 const timeoutId = setTimeout(() => controller.abort(), 10000); // Timeout de 10 segundos
-                const response = await fetch('https://mp-api.onrender.com/create_preference', {
+                const response = await fetch('https://rifa-miguel.onrender.com/create_preference', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
