--- a/como-funciona.html
+++ b/como-funciona.html
@@ -56,7 +56,7 @@
 
     <section class="content">
         <h3>Como Funciona</h3>
-        <p>A rifa oferece 1700 símbolos, cada um custando R$ 10, com um prêmio de R$ 2.000. O sorteio será realizado no dia 24 de dezembro ou assim que 100% dos símbolos (1700) forem vendidos, o que ocorrer primeiro. Se em 24 de dezembro não forem atingidos 100%, o sorteio só ocorrerá se 70% dos símbolos (1190) forem vendidos; caso contrário, será prorrogado. Os símbolos comprados e pagos ficam indisponíveis para outros participantes. Se um símbolo for selecionado e não pago, ele volta a ficar disponível após 24 horas. Participe e ajude o Miguel!</p>
+        <p>A rifa oferece 1700 numeros, cada um custando R$ 10, com um prêmio de R$ 2.000. O sorteio será realizado no dia 24 de dezembro ou assim que 100% dos numeros (1700) forem vendidos, o que ocorrer primeiro. Se em 24 de dezembro não forem atingidos 100%, o sorteio só ocorrerá se 70% dos numeros (1190) forem vendidos; caso contrário, será prorrogado. Os numeros comprados e pagos ficam indisponíveis para outros participantes. Se um numero for selecionado e não pago, ele volta a ficar disponível após 24 horas. Participe e ajude o Miguel!</p>
     </section>
 
     <footer>
